Fix alignment issues at projects section

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,15 +8,17 @@ html {
 }
 
 body {
+  background-image: linear-gradient(135deg, #f4f1ea, #fff);
   font-family: Montserrat, sans-serif;
   color: #1F271B;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: stretch;
   padding: 0;
   margin: 0;
   height: 100vh;
 }
+
 
 /* h2 {
   opacity: .5;
@@ -29,12 +31,11 @@ body {
 }
 
 .main-content {
-  background-image: linear-gradient(135deg, #f4f1ea, #fff);
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: calc(calc(100vw)*calc(4/5));
+  /* width: calc(calc(100vw)*calc(4/5)); */
   padding: 20px;
   margin: 0;
   overflow-x: scroll;
@@ -46,7 +47,7 @@ body {
   flex-direction: column;
   align-items: center;
   box-shadow: 2px 0 20px rgba(30,30,30,.2);
-  background-image: linear-gradient(-10deg, #EE964B 45%, #F4D35E 0%);
+  background-image: linear-gradient(-10deg, #EE964B 60%, #F4D35E 0%);
   width: 300px;
   left:0;
   top: 0;
@@ -206,8 +207,11 @@ body {
 /* PROJECTS SECTION START */
 .projects-background {
     width: 100%;
-    /* margin: 20px -20px; */
     padding: 0;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch; */
 }
 /*
 .projects {
@@ -226,18 +230,18 @@ body {
 .projects-background>.title {
   color: #222;
   align-self: center;
-  margin: 0;
+  margin: 20px;;
 }
 
 .desktop {
   width: 600px;
-  height: 345px;
+  height: 388px;
   margin: 10px;
 }
 
 .mobile {
-  width: 180px;
-  height: 345px;
+  width: 194px;
+  height: 388px;
   margin: 10px;
 }
 
@@ -245,10 +249,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
   background-color: rgba(162,228,69,.6);
-  padding: 20px;
-  overflow: visible;
+  padding: 40px 20px 20px 20px;
   margin: -20px;
   }
 
@@ -259,7 +261,7 @@ body {
   width: 100%;
 }
 
-.project2 {
+/* .project2 {
   width: 180px;
   height: 300px;
   margin: 10px 20px;
@@ -278,5 +280,5 @@ body {
   height: 300px;
   margin: 10px 20px;
   background-color: #C2AFF0;
-}
+} */
 /* PROJECTS SECTION END */
